--- a/docs/usp570/pm_usp570.tex
+++ b/docs/usp570/pm_usp570.tex
@@ -178,15 +178,14 @@ While industry, scholars and governments realized the high impact of AV,
 some research frameworks also imply it is a highly uncertainly evolution
 rising up some complex issues such as coupling, resonance, or agitation.
 Milakis, Van Arem, and Van Wee (2017) arrange many substantial
-implications of autonomous vehicles by a structure of {[}\emph{ripple
-effect}{]}, whcih reflected a sequantially spreading process. Land use
-is placed in the second-order that is affected by the factors in the
-first-order including travel cost, travel time, vehicle use, capacity,
-trvael modes, and etc. The flaw of this structure is that the ripple
-effects model emphasizes the diffusion characteristic of the AV
-technology and cannot describe the feedback effects. The changes of real
-estate and land use will influence the travel behavior and traffic in
-the first-order too.
+implications of AVs by a structure of {[}\emph{ripple effect}{]}, whcih
+reflected a sequantially spreading process. Land use is placed in the
+second-order that is affected by the factors in the first-order
+including travel cost, travel time, vehicle use, capacity, trvael modes,
+and etc. The flaw of this structure is that the ripple effects model
+emphasizes the diffusion characteristic of the AV technology and cannot
+describe the feedback effects. The changes of urban form and land use
+will influence the travel behavior and traffic in the first-order too.
 
 The \emph{Diamond of Assembly} (Levinson and Krizek 2018 Chapter.12) and
 the \emph{feedback cylce} (Wegener and Fürst 2004; adaped by
@@ -211,75 +210,99 @@ cycle.
 the supply and demand model explaines the relationship between the price
 (travel cost) and the quantity (VMT). When price changed or the curve
 shifted, the market-clearing equilibrium point will reach a new one. In
-estimating the impact of AV on travel consumption, most of current
-research agree that AV will provide more options for travelers with less
-travel time and larger capacity {[}{]}. These means the lower price and
-higher service qualities, which will induce more and longer trips,
-produce more overall VMT {[}{]}. At the same time, other research noice
-that more available services by AV may encourage low-occupied vehile and
-reduce transit use. {[}{]} The tradeoff between higher effecient and
-higher demand makes the trends of congestion and emission being
-uncertaint. Overall, these are incremental changes in quantities.
+estimating the impact of AVs on travel consumption, most of current
+research agree that AVs will provide more options for travelers with
+less travel time and larger capacity. According the results of 37
+modelling studies from 2013 to 2018, The application of AVs means the
+lower price and higher service qualities, which will induce more and
+longer trips, produce more total VMT (Soteropoulos, Berger, and Ciari
+2019). At the same time, these research noice that more available
+services by AVs may encourage low-occupied vehile, reduce transit use,
+and invrease VMT. (Taiebat et al. 2018) The tradeoff between higher
+effecient and higher demand makes the trends of congestion and emission
+being uncertaint. Overall, these are equalising and incremental changes
+in quantities.
 
-However, as a breakthrough technology, the impact of AVs may not follow
-some divergent curves. For example, the \emph{prospect theory} of value
-and gains shows a logistic curve. (Levinson and Krizek 2018, 6) When
-coming to the relationship of bus ridership to wait time, the curve
-shows the initial point is not stable. (Levinson and Krizek 2018, 83) A
-slightly change will let it slipe to two stabel equilibria. But the
-equilibrious points represent two direction, a vicious circle (low
-ridership and high wait time) or a virtuous circle (high ridership and
-low wait time).
+However, as a breakthrough technology, the impacts of AVs may not follow
+some divergent curves and show the polarising characteristics. For
+example, the \emph{prospect theory} of value and gains shows a logistic
+curve. (Levinson and Krizek 2018, 6) When coming to the relationship of
+bus ridership to wait time, the curve shows the initial point is not
+stable. (Levinson and Krizek 2018, 83) A slightly change will let it
+slipe to two stabel equilibria. But the equilibrious points represent
+two direction, a vicious circle (low ridership and high wait time) or a
+virtuous circle (high ridership and low wait time).
 
 To explain this phenomenon, we need understand the components of travel
 cost and current options on travel modes. The opportunity cost and
 transaction cost are the significant part of travel cost. Being late for
-work, a meeting, or a flight means much higher opportunity loss than
-travel cost, whcih can explain why people hat uncertaint and wait time.
-Similarly, hailing a taxi for each trip or planning carpool everyday
-means the transaction cost are unacceptable expensive. Meanwhile, the
-available travel modes options are limited. Once people choosing
-transit, their trips often lost the reliability and flexibility. They
-also have few options on the transit quality, such as speed, headway,
-and routes. Thus, people choose to own a private car to control the high
-opportunity cost and transaction cost. Now we know why the initial point
-is not stable.
+work, a meeting, or a flight means much higher opportunity loss, whcih
+can explain why people hat uncertaint and wait time. Similarly, hailing
+a taxi for each trip or planning carpool everyday means the transaction
+cost are unacceptable expensive. Meanwhile, the available travel modes
+options are limited. Once people choosing transit, their trips often
+lost the reliability and flexibility. They also have few options on the
+transit quality, such as speed, headway, and routes. Thus, people choose
+to own a private car to control the high opportunity cost and
+transaction cost. Now we know why the initial point is not stable.
 
 The practices of mobility-as-a-services (Maas) proved by TNC introduced
 a potential solution. For the connected AV's `perfect information' and
 automation, Mass could largely reduce the opportunity cost and
-transaction cost. Moreover, It provdes a series of options by monetized
-the cost of reliability and flexibility. A hurried passenger may will
-pay \$100 for arriving the airport as soon as possible. A worker may
-will get up one hour earlier for a \$10 off-peak pass per month. Many
-research show that the ridersharing level is a critical variable for AV
-application. The preseting value of ridershare could drastically change
-the simulating results of the models. {[}{]}
+transaction cost, then could reduce car ownership. Moreover, It provdes
+a series of options by monetized the values of reliability and
+flexibility. A hurried passenger may will pay \$100 for arriving the
+airport as soon as possible. A worker may will get up one hour earlier
+for a \$10 off-peak pass per month.
 
-As shown in Milakis, Van Arem, and Van Wee (2017)'s ripple effect, these
-changes triggered by AVs are not about land use. But they are the direct
-forces pushing the land use changes forward. And the changes may like a
-suddenly switching lanes rather than a gradual process. We should
-realize the impacts of AVs may keep accelerating until all the energy
-released and change the prvious equations on parameters and even
-distributions.
+This is a business mode transition in many ways. Many research show that
+the ridersharing level is a critical variable for AVs application. The
+preseting value of ridershare could drastically change the simulating
+results of the models. What's more, travel time could become a positive
+factor in transportation models. The value of time as a large part of
+travel cost may decrease and even could turn to a productive gain
+(Singleton 2019). Although scholars are discussing how significance the
+time cost will change, that would like a suddenly switching lanes rather
+than a gradual process. We should realize the impacts of AVs may keep
+accelerating until all the energy released and should reset the prvious
+equations with new parameters and even new distributions.
 
 \hypertarget{the-second-order}{%
 \section{The second order}\label{the-second-order}}
 
-\emph{The bid-rent theroy}: this theory oriented form von {[}Thünen{]}`s
-model, which derived from the utility maximization through introducing
-the spatial variables. The essential reason is that the travel cost is
-positively correlated with distance. All the activities want to minimize
-the cost and compete for the land close to city center. From the
-'concentric zone model' by {[}Burgess{]} to {[}Alonso{]}'s land market
-model, and to the gravity model for measuring accessibility, this
-economic theory is the basis of many land use models. The relevant
-research conclude that urban sprawl might be an output of AV
-application. {[}{]} In the same way, the research about parking say that
-the CBD could be more dense for less demand of parking lot. However,
-these inferences build on the assumptions that the functions remain the
-same. the incremental changes happen on values and parameters.
+As shown in Milakis, Van Arem, and Van Wee (2017)'s ripple effect, the
+first-order changes triggered by AVs are not about land use. But these
+forces will push the land use changes forward.
+
+An essential reason is that the travel cost is positively correlated
+with distance. From the technical perspective, \emph{the gravity model}
+for measuring accessibility considers the mass of place and distance
+(travel time) as the determinative factors. From the economic
+perspective, all the activities want to minimize the cost and compete
+for the land close to city center. \emph{The bid-rent theroy} oriented
+form Thünen (1826)`s model, which derived from the utility maximization
+through introducing the spatial variables. From the 'concentric zone
+model' by Burgess (2008), to Christaller (1933)'s central place theory,
+and to Alonso and others (1964)'s land market model, this economic
+theory is the basis of many land use models. The relevant research
+conclude that wider urban sprawl might be an output of AVs application
+(Soteropoulos, Berger, and Ciari 2019). In the same way, the research
+about parking say that the CBD could be more dense for less demand of
+parking lot {[}{]}. However, these inferences build on the theories of
+spatial economic equilibrium. The underline assumptions are the
+functions remain the same and the incremental changes happen on values
+and parameters. There are less research from the theories of spatial
+polarisation (Pred 1966).
+
+Hagerstrand (1970)'s \emph{action-space theory} proposes ``action spaces
+are limited by three types of constraints: capacity constraints,
+coupling constraints, and institutional constraints.'' While the growth
+of capacity is still incremental, the matching cost might be
+negligitable in AVs era. The \emph{theory of time and travel budgets} by
+Zahavi, Beckmann, and Golob (1981) and Downes and Emmerson (1985) agree
+that ``longer trips make more dispersed locations.'' But existing
+literature don't talk a lot about what is ``a higher degree of spatial
+division of labour possible'' in AVs era.
 
 The theory of \emph{network society} by Castells (2011) and other theory
 of the information society imply another possible perspect of land use
@@ -295,56 +318,50 @@ surrounding environment but don't care about the actual locations.
 \section{The feedback cylce}\label{the-feedback-cylce}}
 
 In this section, we try to explore what changes may happen on land use
-feedback cycle brought by the AVs technology. selfreinforcement. The
-changes triggered by AV may like a process of convolution and iteration,
-Is AV will leverage the vicious or virtuous circle?
+feedback cycle brought by the AVs technology. From the temporal
+dimension, the theory of long waves by (Kondratieff 1926) and
+(Schumpeter 1939) discribed the cycle of a ``earlier technologies went
+from invention through take-off and rapid growth to saturation and was
+eventually superseded by a more advanced technology.'' From the spatial
+dimension, the changes triggered by AVs may like a ``cyclical sequence
+of agglomeration and deglomeration phases'' (Van den Berg et al. 1982).
 
-The concept of \emph{Public good} also helps to understand this topic.
-Transprotation infrastructure is the semi-public good. Except toll road,
-this system is non-excludable. But the congested sections in the peak
-hour are rivalrous. Fuel taxs partly reflect the amount of use of road,
-but can not adjust the spatial distribution. Even the congestion
-charging like London, is still a binary intervention (Yes or no). Some
-research conclude that the success of pricing policy depend on political
-support. {[}{]} But the research don't realize that the current charging
-plan cannot effectively and accurately reflect the use of transprotation
-infrastructure. From the perspective of equalty, charging an
-unmeasurable service is unfair. From the perspective of market, an
-unmeasurable trade is inevitablelly inefficient. Pricing by
-demand-supply mechanism becomes infeasible. Although many funding tools
-try to combine the transportation investiment and land value return
-together to incentive virtuous circle, there always some drawbacks.
-{[}{]} The feedback cylce becomes a decay process for free rider
-problem, or for delay of demand response.
+Although many funding tools try to combine the transportation
+investiment and land value return together to incentive virtuous circle,
+there always some drawbacks (Vadali et al. 2018). From the perspective
+of equalty, charging an unmeasurable service is unfair. From the
+perspective of market, an unmeasurable trade is inevitablelly
+inefficient. The feedback cylce shows a decay process for free rider
+problem, or for delay of demand response. Pricing by demand-supply
+mechanism becomes infeasible.
 
-Here we have to think about the \emph{Tiebout model}. As a positive
-political theory model, (Tiebout 1956) contributes a non-political
-solution to optimal public goods provision which known as ``foot
-voting''. Through competition between communities, the mobile residents
-``vote with their feet''. The primary assumptions Tiebout model relied
-on are that conusmers can freely choose where they live. It assumes that
-there are engough commuinties available and commuting cost is
-negligible. there are not externalities or spillover of public goods
-across towns. Many scholars critique Tiebout model for its unpractical
-assumptions. For the same reasons, Tiebout model is more success in
-suburban areas. The roads in suburban communities like a club goods.
-There is no free rider problem. All the cost and externalities
-internalized in property tax.
+\emph{Tiebout model} contributes a non-political solution to optimal
+public goods provision (Tiebout 1956). The ``foot voting'' by the mobile
+residents motivates the competition between communities. The primary
+assumptions Tiebout model relied on are that conusmers can freely choose
+where they live. It assumes that there are engough commuinties available
+and commuting cost is negligible. there are not externalities or
+spillover of public goods across towns. Many scholars critique Tiebout
+model for its unpractical assumptions. For the same reasons, Tiebout
+model is more success in suburban areas. The roads in suburban
+communities like a club goods. There is no free rider problem. All the
+cost and externalities internalized in property tax.
 
-Therefore, the theory of local governments competetion and beneficiary
-pays principle can inspire us to conceive the new feedback cycle. Maas
+Entering the AV era, Tiebout model might apply to whole urban area. Maas
 suppored by connected AV allows us to measure the road use for each
 trip. Moreover, Maas provide the oppotuinity of internalizing all the
 positive/negative externalities and redefine the boundary of public
-good. Under this scenario, transportation become a excludable and
-rivalrous goods. The cities or communities compete by investing and
-improving infrastucture; Transportation suppliers bid for road license
-and provide as many as possible options for consumers; Consumers choose
-the travel services based on their ability and willingness to pay money
-or change their itineraries. As Levinson and Krizek (2018) say, ``prices
-create choices, and choices are fair.'' (p.248) Entering the AV era,
-Tiebout model might apply to whole urban area. As simulated by social
-ecological models, the social segregation may be more significant.
+good. The theory of local governments competetion and beneficiary pays
+principle can be fully applied on the new feedback cycle. Under this
+scenario, transportation become a excludable and rivalrous goods. The
+cities or communities compete by investing and improving infrastucture;
+Transportation suppliers bid for road license and provide as many as
+possible options for consumers; Consumers choose the travel services
+based on their ability and willingness to pay money or change their
+itineraries. The dark side is the social segregation in Schelling's
+model (Schelling 1971) may be more significant and invisible. But, as
+Levinson and Krizek (2018) say, ``prices create choices, and choices are
+fair.'' (p.248)
 
 Behavior and land use (Soteropoulos, Berger, and Ciari 2019)
 
@@ -354,11 +371,43 @@ long-term effects (Milakis 2019)
 
 (Fagnant and Kockelman 2015)
 
+Zmud et al. (2018)
+
 \hypertarget{the-policy-options}{%
 \section{The policy options}\label{the-policy-options}}
 
-This solution of Maas also provides a valuable space for policy-makers
-to guide the transportation system in the direction we want.
+As Crute et al. (2018) suggested, In response to the changes by AVs
+technology, the policy makers should ``bolster transportation demand
+management, reconsider the right-of-way, and continue to develop
+transit.'' These types of method are aimed at the first-order changes.
+``Rethinking the parking standard and requirements'' could help better
+redevelop the urban parking lots saved by AVs. Urabn Groth Boundary is
+also a ready-made tool for controling sprawl. In the face of those
+gradual changes, existing theories and policy tools are sufficient to
+cope with them.
+
+The true challenges are how to response the selfreinforcement changes,
+the new distributions, and the networks never seen before? And how to
+let AVs leverage the virtuous circle rather than vicious? The solution
+of Maas provides a valuable space for policy-makers to guide the
+transportation system in the direction we want. Responding to the
+promotion of Maas by industry, government should advocate ``a simpler,
+smarter and fairer system of road user charging''.(Barrett, Wedderburn,
+and Belcher 2019) The London government is launching a new scheme of
+``charging drivers on a per-mile basis based on distanced travelled,
+vehicle emissions, local levels of congestion and pollution, and
+availability of public transport alternatives.'' Hand (2016)'s suggests
+to start some pilot projects. SDOT (2017)'s policy want to ``establish a
+city-owned transportation network company digital platform to incubate
+smaller shared AV fleet businesses'' in Los Angele.
+
+Other MPAs are on the move. This memo cannot cover all the AVs' issues
+but want to urges MTC to realize the AVs' substantial effects and
+support the relevant research for the future of Bay Area.
+
+mitigating
+
+the change on road capacities, parking lots, curve space.
 
 Above analysis are inference base on exsiting theories and research.
 
@@ -375,13 +424,17 @@ The stated preference, reveled preference, simulation by models
 
 The ripple effects
 
-``Mobility-as-a-Service may cause a decline in car ownership. If average
-vehicle occupancy for on-road time decreases, total VMT will increase.''
-(Taiebat et al. 2018) Time cost may decrease (Singleton 2019) cut off
-labor cost, the change of parking, affected by travel demand and
+cut off labor cost, the change of parking, affected by travel demand and
 behavior
 
-the change on road capacities, parking lots, curve space.
+Bid for Mobility. pircing policy
+
+such scheme would reflect the true impact of individual vehicle
+journeys. be integrated with London's wider transport system and be
+accessible via an app and digital platform. This would allow Londoners
+to compare, plan and pay for all journeys in one place. Ultimately it
+would encourage drivers to leave their cars at home when possible, by
+providing them with alternative travel options.
 
 \begin{itemize}
 \tightlist
@@ -442,14 +495,45 @@ CA should play a leading role. responsibility
 \hypertarget{notes}{%
 \section{Notes}\label{notes}}
 
+The concept of \emph{Public good} helps to understand the cyclical
+process. Transprotation infrastructure is the semi-public good. Except
+toll road, this system is non-excludable. But the congested sections in
+the peak hour are rivalrous. Fuel taxs partly reflect the amount of use
+of road, but can not adjust the spatial distribution. Even the
+congestion charging like London, is still a binary intervention (Yes or
+no). Some research conclude that the success of pricing policy depend on
+political support. {[}{]} But the research don't realize that the
+current charging plan cannot effectively and accurately reflect the use
+of transprotation infrastructure.
+
 \hypertarget{references}{%
 \section*{References}\label{references}}
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
+\leavevmode\hypertarget{ref-alonso1964location}{}%
+Alonso, William, and others. 1964. ``Location and Land Use. Toward a
+General Theory of Land Rent.'' \emph{Location and Land Use. Toward a
+General Theory of Land Rent.} Cambridge, Mass.: Harvard Univ. Pr.
+
+\leavevmode\hypertarget{ref-barrett2019green}{}%
+Barrett, S, M Wedderburn, and E Belcher. 2019. ``Green Light: Next
+Generation Road User Charging for a Healthier, More Liveable, London.''
+\url{www.centreforlondon.org/publication/road-user-charging/}.
+
+\leavevmode\hypertarget{ref-burgess2008growth}{}%
+Burgess, Ernest W. 2008. ``The Growth of the City: An Introduction to a
+Research Project.'' In \emph{Urban Ecology}, 71--78. Springer.
+
 \leavevmode\hypertarget{ref-castells2011rise}{}%
 Castells, Manuel. 2011. \emph{The Rise of the Network Society}. Vol. 12.
 John wiley \& sons.
+
+\leavevmode\hypertarget{ref-christaller1933zentralen}{}%
+Christaller, Walter. 1933. \emph{Die Zentralen Orte in Süddeutschland:
+Eine ökonomisch-Geographische Untersuchung über Die Gesetzmässigkeit Der
+Verbreitung Und Entwicklung Der Siedlungen Mit Städtischen Funktionen}.
+University Microfilms.
 
 \leavevmode\hypertarget{ref-APA2018autonomous}{}%
 Crute, Jeremy, William Riggs, Timothy Stewart Chapin, and Lindsay
@@ -461,6 +545,11 @@ Docherty, Iain, Greg Marsden, and Jillian Anable. 2018. ``The Governance
 of Smart Mobility.'' \emph{Transportation Research Part A: Policy and
 Practice} 115. Elsevier: 114--25.
 \url{https://doi.org/10.1016/j.tra.2017.09.012}.
+
+\leavevmode\hypertarget{ref-downes1985urban}{}%
+Downes, JD, and P Emmerson. 1985. ``Urban Travel Modelling with Flexible
+Travel Budgets.'' \emph{Crowthorne: Transport and Road Research
+Laboratory}.
 
 \leavevmode\hypertarget{ref-fagnant2015preparing}{}%
 Fagnant, Daniel J, and Kara Kockelman. 2015. ``Preparing a Nation for
@@ -476,11 +565,24 @@ Scientometric and Bibliometric Review.'' \emph{Transport Reviews} 39
 (1). Taylor \& Francis: 9--28.
 \url{https://doi.org/10.1080/01441647.2018.1518937}.
 
+\leavevmode\hypertarget{ref-hagerstrand1970people}{}%
+Hagerstrand, T. 1970. ``What About People in Spatial Science.''
+\emph{Regional Science Association} 24: 7--21.
+
+\leavevmode\hypertarget{ref-hand2016mobility_LA}{}%
+Hand, Ashley Z. 2016. ``Urban Mobility in a Digital Age - a
+Transportation Technology Strategy for Los Angeles.''
+\url{www.urbanmobilityla.com/}.
+
 \leavevmode\hypertarget{ref-hawkins2019integrated}{}%
 Hawkins, Jason, and Khandker Nurul Habib. 2019. ``Integrated Models of
 Land Use and Transportation for the Autonomous Vehicle Revolution.''
 \emph{Transport Reviews} 39 (1). Taylor \& Francis: 66--83.
 \url{https://doi.org/10.1080/01441647.2018.1449033}.
+
+\leavevmode\hypertarget{ref-kondratieff1926langen}{}%
+Kondratieff, ND. 1926. ``Die Langen Wellen Der Konjunktur. Archiv Fuer
+Sozialwissenschaft Und Sozialpolitik.'' \emph{Tuebingen} 56 (3): 537.
 
 \leavevmode\hypertarget{ref-legacy2019planning}{}%
 Legacy, Crystal, David Ashmore, Jan Scheurer, John Stone, and Carey
@@ -521,10 +623,29 @@ NHTSA. 2019. ``Automated Driving Systems.'' National Highway;
 Transportation Safety Administration. 2019.
 \url{https://www.nhtsa.gov/vehicle-manufacturers/automated-driving-systems}.
 
+\leavevmode\hypertarget{ref-pred1966spatial}{}%
+Pred, Allan Richard. 1966. \emph{The Spatial Dynamics of Us
+Urban-Industrial Growth, 1800-1914: Interpretive and Theoretical
+Essays}. MIT press.
+
 \leavevmode\hypertarget{ref-sae2018taxonomy}{}%
 SAE. 2018. ``Taxonomy and Definitions for Terms Related to Driving
 Automation Systems for on-Road Motor Vehicles.'' J3016. SAE
 International.
+
+\leavevmode\hypertarget{ref-schelling1971dynamic}{}%
+Schelling, Thomas C. 1971. ``Dynamic Models of Segregation.''
+\emph{Journal of Mathematical Sociology} 1 (2). Taylor \& Francis:
+143--86.
+
+\leavevmode\hypertarget{ref-schumpeter1939business}{}%
+Schumpeter, Joseph Alois. 1939. \emph{Business Cycles: A Theoretical,
+Historical, and Statistical Analysis of the Capitalist Process}.
+McGraw-Hill New York.
+
+\leavevmode\hypertarget{ref-SDOT2017mobility_Sea}{}%
+SDOT. 2017. ``New Mobility Playbook.'' Seattle Department of
+Transportation. \url{newmobilityseattle.info/}.
 
 \leavevmode\hypertarget{ref-singleton2019discussing}{}%
 Singleton, Patrick A. 2019. ``Discussing the `Positive Utilities' of
@@ -546,15 +667,43 @@ Implications of Connected and Automated Vehicles.'' \emph{Environmental
 Science \& Technology} 52 (20). ACS Publications: 11449--65.
 \url{https://doi.org/10.1021/acs.est.8b00127}.
 
+\leavevmode\hypertarget{ref-thunen1826isolierte}{}%
+Thünen, JH von. 1826. ``Der Isolierte Staat.'' \emph{Beziehung Auf
+Landwirtschaft Und Nationalökonomie}.
+
 \leavevmode\hypertarget{ref-tiebout1956pure}{}%
 Tiebout, Charles M. 1956. ``A Pure Theory of Local Expenditures.''
 \emph{Journal of Political Economy} 64 (5). The University Press of
 Chicago: 416--24. \url{https://doi.org/10.1086/257839}.
 
+\leavevmode\hypertarget{ref-vadali2018guidebook}{}%
+Vadali, Sharada, Johanna Zmud, Todd Carlson, Karin DeMoors, Rick Rybeck,
+Steven Fitzroy, Naomi Stein, and Mark Sieber. 2018. \emph{Guidebook to
+Funding Transportation Through Land Value Return and Recycling}. Project
+19-13. \url{https://doi.org/10.17226/25110}.
+
+\leavevmode\hypertarget{ref-van1982urban}{}%
+Van den Berg, Leo, Roy Drewett, Leo H Klaasen, Angelo Rossi, and
+Cornelis HT Vijverberg. 1982. ``Urban Europe: A Study of Growth and
+Decline.'' Elmsford NY/Oxford England Pergamon Press 1982.
+
 \leavevmode\hypertarget{ref-wegener2004land}{}%
 Wegener, Michael, and Franz Fürst. 2004. ``Land-Use Transport
 Interaction: State of the Art.'' \emph{Available at SSRN 1434678}.
 \url{https://doi.org/10.2139/ssrn.1434678}.
+
+\leavevmode\hypertarget{ref-zahavi1981umot}{}%
+Zahavi, Yacov, Martin J Beckmann, and Thomas F Golob. 1981. ``The
+Umot/Urban Interactions.''
+
+\leavevmode\hypertarget{ref-zmud2018updating}{}%
+Zmud, Johanna, Tom Williams, Maren Outwater, Mark Bradley, Nidhi Kalra,
+Shelley Row, National Cooperative Highway Research Program,
+Transportation Research Board, and National Academies of Sciences,
+Engineering, and Medicine. 2018. \emph{Updating Regional Transportation
+Planning and Modeling Tools to Address Impacts of Connected and
+Automated Vehicles, Volume 2: Guidance}. Washington, D.C.:
+Transportation Research Board. \url{https://doi.org/10.17226/25332}.
 
 
 \end{document}
