--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -51,7 +51,7 @@ There are some indications that a new era might be dawning. We try to answer how
 # The Framworks of changes
 
 While industry, scholars and governments realized the high impact of AV, some research frameworks also imply it is a highly uncertainly evolution rising up some complex issues such as coupling, resonance, or agitation.
-@milakis2017policy arrange many substantial implications of autonomous vehicles by a structure of [*ripple effect*], whcih reflected a sequantially spreading process. Land use is placed in the second-order that is affected by the factors in the first-order including travel cost, travel time, vehicle use, capacity, trvael modes, and etc. The flaw of this structure is that the ripple effects model emphasizes the diffusion characteristic of the AV technology and cannot describe the feedback effects. The changes of real estate and land use will influence the travel behavior and traffic in the first-order too. 
+@milakis2017policy arrange many substantial implications of AVs by a structure of [*ripple effect*], whcih reflected a sequantially spreading process. Land use is placed in the second-order that is affected by the factors in the first-order including travel cost, travel time, vehicle use, capacity, trvael modes, and etc. The flaw of this structure is that the ripple effects model emphasizes the diffusion characteristic of the AV technology and cannot describe the feedback effects. The changes of urban form and land use will influence the travel behavior and traffic in the first-order too. 
 
 The *Diamond of Assembly* [@levinson2018metropolitan Chapter.12] and the *feedback cylce* [@wegener2004land; adaped by @soteropoulos2019impacts] are two helpful complements. These figures can present the relationship between transportation and land use in a more clear manner. AV technology as a exogenous variable will influence travel behaviors in the first ripple, and then is reflected in the change of accessiblity. The dynamic of accesessibility will interact with land use and forms a new cycle.
 
@@ -59,35 +59,38 @@ The history of 'the four stages' [@Muller2017transportation] tells us, if AVs be
 
 # The first order
 
-*The utility maximization problem*: As the core of consumer theory, the supply and demand model explaines the relationship between the price (travel cost) and the quantity (VMT). When price changed or the curve shifted, the market-clearing equilibrium point will reach a new one. In estimating the impact of AV on travel consumption, most of current research agree that AV will provide more options for travelers with less travel time and larger capacity []. These means the lower price and higher service qualities, which will induce more and longer trips, produce more overall VMT []. At the same time, other research noice that more available services by AV may encourage low-occupied vehile and reduce transit use. [] The tradeoff between higher effecient and higher demand makes the trends of congestion and emission being uncertaint. Overall, these are incremental changes in quantities.
+*The utility maximization problem*: As the core of consumer theory, the supply and demand model explaines the relationship between the price (travel cost) and the quantity (VMT). When price changed or the curve shifted, the market-clearing equilibrium point will reach a new one. In estimating the impact of AVs on travel consumption, most of current research agree that AVs will provide more options for travelers with less travel time and larger capacity. According the results of 37 modelling studies from 2013 to 2018, The application of AVs means the lower price and higher service qualities, which will induce more and longer trips, produce more total VMT [@soteropoulos2019impacts]. At the same time, these research noice that more available services by AVs may encourage low-occupied vehile, reduce transit use, and invrease VMT. [@taiebat2018review] The tradeoff between higher effecient and higher demand makes the trends of congestion and emission being uncertaint. Overall, these are equalising and incremental changes in quantities.
 
-However, as a breakthrough technology, the impact of AVs may not follow some divergent curves. For example, the *prospect theory* of value and gains shows a logistic curve. [@levinson2018metropolitan p.6] When coming to the relationship of bus ridership to wait time, the curve shows the initial point is not stable. [@levinson2018metropolitan p.83] A slightly change will let it slipe to two stabel equilibria. But the equilibrious points represent two direction, a vicious circle (low ridership and high wait time) or a virtuous circle (high ridership and low wait time). 
+However, as a breakthrough technology, the impacts of AVs may not follow some divergent curves and show the polarising characteristics. For example, the *prospect theory* of value and gains shows a logistic curve. [@levinson2018metropolitan p.6] When coming to the relationship of bus ridership to wait time, the curve shows the initial point is not stable. [@levinson2018metropolitan p.83] A slightly change will let it slipe to two stabel equilibria. But the equilibrious points represent two direction, a vicious circle (low ridership and high wait time) or a virtuous circle (high ridership and low wait time). 
 
-To explain this phenomenon, we need understand the components of travel cost and current options on travel modes. The opportunity cost and transaction cost are the significant part of travel cost. Being late for work, a meeting, or a flight means much higher opportunity loss than travel cost, whcih can explain why people hat uncertaint and wait time. Similarly, hailing a taxi for each trip or planning carpool everyday means the transaction cost are unacceptable expensive. 
+To explain this phenomenon, we need understand the components of travel cost and current options on travel modes. The opportunity cost and transaction cost are the significant part of travel cost. Being late for work, a meeting, or a flight means much higher opportunity loss, whcih can explain why people hat uncertaint and wait time. Similarly, hailing a taxi for each trip or planning carpool everyday means the transaction cost are unacceptable expensive. 
 Meanwhile, the available travel modes options are limited. Once people choosing transit, their trips often lost the reliability and flexibility. They also have few options on the transit quality, such as speed, headway, and routes. Thus, people choose to own a private car to control the high opportunity cost and transaction cost. Now we know why the initial point is not stable.
 
-The practices of mobility-as-a-services (Maas) proved by TNC introduced a potential solution. For the connected AV's 'perfect information' and automation, Mass could largely reduce the opportunity cost and transaction cost. Moreover, It provdes a series of options by monetized the cost of reliability and flexibility. A hurried passenger may will pay \$100 for arriving the airport as soon as possible. A worker may will get up one hour earlier for a \$10 off-peak pass per month. Many research show that the ridersharing level is a critical variable for AV application. The preseting value of ridershare could drastically change the simulating results of the models. [] 
+The practices of mobility-as-a-services (Maas) proved by TNC introduced a potential solution. For the connected AV's 'perfect information' and automation, Mass could largely reduce the opportunity cost and transaction cost, then could reduce car ownership. Moreover, It provdes a series of options by monetized the values of reliability and flexibility. A hurried passenger may will pay \$100 for arriving the airport as soon as possible. A worker may will get up one hour earlier for a \$10 off-peak pass per month. 
 
-As shown in @milakis2017policy's ripple effect, these changes triggered by AVs are not about land use. But they are the direct forces pushing the land use changes forward. And the changes may like a suddenly switching lanes rather than a gradual process. We should realize the impacts of AVs may keep accelerating until all the energy released and change the prvious equations on parameters and even distributions.
+This is a business mode transition in many ways. Many research show that the ridersharing level is a critical variable for AVs application. The preseting value of ridershare could drastically change the simulating results of the models. What's more, travel time could become a positive factor in transportation models. The value of time as a large part of travel cost may decrease and even could turn to a productive gain [@singleton2019discussing]. Although scholars are discussing how significance the time cost will change, that would like a suddenly switching lanes rather than a gradual process. We should realize the impacts of AVs may keep accelerating until all the energy released and should reset the prvious equations with new parameters and even new distributions.
 
 # The second order
 
-*The bid-rent theroy*: this theory oriented form von [Thünen]'s model, which derived from the utility maximization through introducing the spatial variables. The essential reason is that the travel cost is positively correlated with distance. All the activities want to minimize the cost and compete for the land close to city center. From the 'concentric zone model' by [Burgess] to [Alonso]'s land market model, and to the gravity model for measuring accessibility, this economic theory is the basis of many land use models. The relevant research conclude that urban sprawl might be an output of AV application. [] In the same way, the research about parking say that the CBD could be more dense for less demand of parking lot. However, these inferences build on the assumptions that the functions remain the same. the incremental changes happen on values and parameters. 
+As shown in @milakis2017policy's ripple effect, the first-order changes triggered by AVs are not about land use. But these forces will push the land use changes forward. 
+
+An essential reason is that the travel cost is positively correlated with distance. 
+From the technical perspective, *the gravity model* for measuring accessibility considers the mass of place and distance (travel time) as the determinative factors. 
+From the economic perspective, all the activities want to minimize the cost and compete for the land close to city center. *The bid-rent theroy* oriented form @thunen1826isolierte's model, which derived from the utility maximization through introducing the spatial variables. From the 'concentric zone model' by @burgess2008growth, to @christaller1933zentralen's central place theory, and to @alonso1964location's land market model, this economic theory is the basis of many land use models. The relevant research conclude that wider urban sprawl might be an output of AVs application [@soteropoulos2019impacts]. In the same way, the research about parking say that the CBD could be more dense for less demand of parking lot []. However, these inferences build on the theories of spatial economic equilibrium. The underline assumptions are the functions remain the same and the incremental changes happen on values and parameters. There are less research from the theories of spatial polarisation [@pred1966spatial].
+
+@hagerstrand1970people's *action-space theory* proposes "action spaces are limited by three types of constraints: capacity constraints, coupling constraints, and institutional constraints." While the growth of capacity is still incremental, the matching cost might be negligitable in AVs era. The *theory of time and travel budgets* by @zahavi1981umot and @downes1985urban agree that "longer trips make more dispersed locations." But existing literature don't talk a lot about what is "a higher degree of spatial division of labour possible" in AVs era.
 
 The theory of *network society* by @castells2011rise and other theory of the information society imply another possible perspect of land use pattern in the AVs era. If the travel demands and supplies can match in realtime and generate as many as possible options for customers, the 'space of places' also could become the 'space of flows.' The traditional forms, including cores, clusters, and corridors will be disintegrated. In the long run, The network may control the travel and assign people to a place. People only choose their activities and surrounding environment but don't care about the actual locations.
 
 # The feedback cylce
 
-In this section, we try to explore what changes may happen on land use feedback cycle brought by the AVs technology.
-selfreinforcement. The changes triggered by AV may like a process of convolution and iteration, 
-Is AV will leverage the vicious or virtuous circle? 
+In this section, we try to explore what changes may happen on land use feedback cycle brought by the AVs technology. From the temporal dimension, the theory of long waves by [@kondratieff1926langen] and [@schumpeter1939business] discribed the cycle of a "earlier technologies went from invention through take-off and rapid growth to saturation and was eventually superseded by a more advanced technology." From the spatial dimension, the changes triggered by AVs may like a "cyclical sequence of agglomeration and deglomeration phases" [@van1982urban].
 
-The concept of *Public good* also helps to understand this topic. Transprotation infrastructure is the semi-public good. Except toll road, this system is non-excludable. But the congested sections in the peak hour are rivalrous. Fuel taxs partly reflect the amount of use of road, but can not adjust the spatial distribution. Even the congestion charging like London, is still a binary intervention (Yes or no). Some research conclude that the success of pricing policy depend on political support. [] But the research don't realize that the current charging plan cannot effectively and accurately reflect the use of transprotation infrastructure. From the perspective of equalty, charging an unmeasurable service is unfair. From the perspective of market, an unmeasurable trade is inevitablelly inefficient. Pricing by demand-supply mechanism becomes infeasible. 
-Although many funding tools try to combine the transportation investiment and land value return together to incentive virtuous circle, there always some drawbacks. [] The feedback cylce becomes a decay process for free rider problem, or for delay of demand response. 
+Although many funding tools try to combine the transportation investiment and land value return together to incentive virtuous circle, there always some drawbacks [@vadali2018guidebook]. From the perspective of equalty, charging an unmeasurable service is unfair. From the perspective of market, an unmeasurable trade is inevitablelly inefficient. The feedback cylce shows a decay process for free rider problem, or for delay of demand response. Pricing by demand-supply mechanism becomes infeasible. 
 
-Here we have to think about the *Tiebout model*. As a positive political theory model, [@tiebout1956pure] contributes a non-political solution to optimal public goods provision which known as "foot voting". Through competition between communities, the mobile residents "vote with their feet". The primary assumptions Tiebout model relied on are that conusmers can freely choose where they live. It assumes that there are engough commuinties available and commuting cost is negligible. there are not externalities or spillover of public goods across towns. Many scholars critique Tiebout model for its unpractical assumptions. For the same reasons, Tiebout model is more success in suburban areas. The roads in suburban communities like a club goods. There is no free rider problem. All the cost and externalities internalized in property tax. 
+*Tiebout model* contributes a non-political solution to optimal public goods provision [@tiebout1956pure]. The "foot voting" by the mobile residents motivates the competition between communities. The primary assumptions Tiebout model relied on are that conusmers can freely choose where they live. It assumes that there are engough commuinties available and commuting cost is negligible. there are not externalities or spillover of public goods across towns. Many scholars critique Tiebout model for its unpractical assumptions. For the same reasons, Tiebout model is more success in suburban areas. The roads in suburban communities like a club goods. There is no free rider problem. All the cost and externalities internalized in property tax. 
 
-Therefore, the theory of local governments competetion and beneficiary pays principle can inspire us to conceive the new feedback cycle. Maas suppored by connected AV allows us to measure the road use for each trip. Moreover, Maas provide the oppotuinity of internalizing all the positive/negative externalities and redefine the boundary of public good. Under this scenario, transportation become a excludable and rivalrous goods. The cities or communities compete by investing and improving infrastucture; Transportation suppliers bid for road license and provide as many as possible options for consumers; Consumers choose the travel services based on their ability and willingness to pay money or change their itineraries. As @levinson2018metropolitan say, "prices create choices, and choices are fair." (p.248) Entering the AV era, Tiebout model might apply to whole urban area. As simulated by social ecological models, the social segregation may be more significant.
+Entering the AV era, Tiebout model might apply to whole urban area. Maas suppored by connected AV allows us to measure the road use for each trip. Moreover, Maas provide the oppotuinity of internalizing all the positive/negative externalities and redefine the boundary of public good. The theory of local governments competetion and beneficiary pays principle can be fully applied on the new feedback cycle. Under this scenario, transportation become a excludable and rivalrous goods. The cities or communities compete by investing and improving infrastucture; Transportation suppliers bid for road license and provide as many as possible options for consumers; Consumers choose the travel services based on their ability and willingness to pay money or change their itineraries. The dark side is the social segregation in Schelling's model [@schelling1971dynamic] may be more significant and invisible. But, as @levinson2018metropolitan say, "prices create choices, and choices are fair." (p.248) 
 
 Behavior and land use [@soteropoulos2019impacts]
 
@@ -97,9 +100,21 @@ long-term effects [@milakis2019long]
 
 [@fagnant2015preparing]
 
+@zmud2018updating
+
 # The policy options
 
-This solution of Maas also provides a valuable space for policy-makers to guide the transportation system in the direction we want.
+As @APA2018autonomous suggested, In response to the changes by AVs technology, the policy makers should "bolster transportation demand management, reconsider the right-of-way, and continue to develop transit." These types of method are aimed at the first-order changes. "Rethinking the parking standard and requirements" could help better redevelop the urban parking lots saved by AVs. Urabn Groth Boundary is also a ready-made tool for controling sprawl. In the face of those gradual changes, existing theories and policy tools are sufficient to cope with them.
+
+The true challenges are how to response the selfreinforcement changes, the new distributions, and the networks never seen before? And how to let AVs leverage the virtuous circle rather than vicious? The solution of Maas provides a valuable space for policy-makers to guide the transportation system in the direction we want. Responding to the promotion of Maas by industry, government should advocate "a simpler, smarter and fairer system of road user charging".[@barrett2019green] The London government is launching a new scheme of "charging drivers on a per-mile basis based on distanced travelled, vehicle emissions, local levels of congestion and pollution, and availability of public transport alternatives." @hand2016mobility_LA's suggests to start some pilot projects.
+@SDOT2017mobility_Sea's policy want to "establish a city-owned transportation network company digital platform to incubate smaller shared AV fleet businesses" in Los Angele.
+
+Other MPAs are on the move. This memo cannot cover all the AVs' issues but want to urges MTC to realize the AVs' substantial effects and support the relevant research for the future of Bay Area.
+
+
+mitigating
+
+the change on road capacities, parking lots, curve space.
 
 Above analysis are inference base on exsiting theories and research.
 
@@ -111,12 +126,15 @@ The stated preference, reveled preference, simulation by models
 
 The ripple effects
 
-"Mobility-as-a-Service may cause a decline in car ownership. If average vehicle occupancy for on-road time decreases, total VMT will increase." [@taiebat2018review] Time cost may decrease [@singleton2019discussing]
+
 cut off labor cost, the change of parking,  affected by travel demand and behavior
 
+Bid for Mobility. pircing policy
 
 
-the change on road capacities, parking lots, curve space.
+such scheme would reflect the true impact of individual vehicle journeys.
+be integrated with London’s wider transport system and be accessible via an app and digital platform. This would allow Londoners to compare, plan and pay for all journeys in one place. Ultimately it would encourage drivers to leave their cars at home when possible, by providing them with alternative travel options.
+
 
 - The response for these shifting changes: 
 
@@ -173,7 +191,7 @@ CA should play a leading role. responsibility
 Notes {#notes}
 ==========
 
-
+The concept of *Public good* helps to understand the cyclical process. Transprotation infrastructure is the semi-public good. Except toll road, this system is non-excludable. But the congested sections in the peak hour are rivalrous. Fuel taxs partly reflect the amount of use of road, but can not adjust the spatial distribution. Even the congestion charging like London, is still a binary intervention (Yes or no). Some research conclude that the success of pricing policy depend on political support. [] But the research don't realize that the current charging plan cannot effectively and accurately reflect the use of transprotation infrastructure. 
 
 ---
 nocite: | 
