--- a/static/usp570/rr_usp570.Rmd
+++ b/static/usp570/rr_usp570.Rmd
@@ -2,10 +2,10 @@
 title: "Reading reflections"
 subtitle: "USP 570"
 author: 'Shen Qu'
-date: "Week 9"
+date: "Week 10"
 output:
-  pdf_document: default
   word_document: null
+  pdf_document: default
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -33,11 +33,12 @@ In the APA report, @APA2018autonomous introduced the concept of Autonomous Vehic
 
  - Discussion: 
 
-@levinson2018metropolitan summarized their values and expectations in a prose style. This chapter reflects the contradictions between incrementalism and strategic planning in the transportation and land use field. The incremental, empirical methodology and epistemology are good at given conditions, are good in the middle section of one historical stage. For example, although the public often votes against high density in many cases, at least scholars reach a consensus on compact development. Why "land use regulations that reduce development densities" is a mistake? Because today we realized and anticipated some bad results of the sprawl that based on the previous observation and evidence. Supposing now there is only one-tenth of the population as before, or we successfully achieve immigration Mars, will we still insist these opinions? The human's rationality is limited and expedient, is subject to the context constraints. The human instinct of getting higher mobility and occupying more living space is stronger and permanent. Why the land use density and transit share are still not ideal despite many efforts for the past few decades? Because we still live in the auto era. The travel cost is significantly less than that in the last era. That is the "confines of mature Systems" mentioned by @levinson2018metropolitan. 
+@levinson2018metropolitan summarized their values and expectations. This chapter reflects the contradictions between incrementalism and strategic planning in the transportation and land use field. The incremental, empirical methodology and epistemology depend on the given conditions, are good in the middle section of one historical stage. For example, although the public often votes against high density in many cases, at least scholars reach a consensus on compact development. Why “land use regulations that reduce development densities” is a mistake? Because today we realized and anticipated some bad results of the sprawl that based on the previous observation and evidence. Supposing now there is only one-tenth of the population as before, or we successfully achieve immigration Mars, will we still insist these opinions? Looking at the big picture, the human instinct of getting higher mobility and occupying more living space is stronger and permanent. Therefore, the human’s rationality is limited and expedient, is subject to the context constraints. 
 
-The authors believe "while the coefficients within the equations will change, the equations will remain the same." I believe the changes are not merely about quantities or parameters, are about the distributions. One hundred years ago, the automobile dominated the street because it released human instinct rather than restricting it. Many troubles at the old age gone with the wheel and new troubles emerged. Now when walking to the node of history, we need to put down some granted experiences and mindset.
+In the same way, the transit share are still not ideal despite many efforts for the past few decades because we still live in the auto era. The travel cost is significantly less than that in the last era. That is the “confines of mature Systems” mentioned by @levinson2018metropolitan. 
+The authors believe “while the coefficients within the equations will change, the equations will remain the same.” But, when coming to an era of transformation, or having significant changes in conditions, the changes in travel behaviors will not merely about quantities or parameters, are about the distributions. In the past one hundred years, the automobile dominated the street because it released human instinct rather than restricting it. Many troubles at the old age gone with the wheel and new troubles emerged. Now when walking to the node of history, we need to put down some granted experiences and mindset and take a more avant-garde attitude.
 
-@APA2018autonomous give a comprehensive prospect for the AVs era, including rethinking the parking standard, right-of-way, and improving transit. But these approaches are hoping the new technology to solve the old problems belong to the current age, rather than propose some strategies towards a new age. It is similar to say, in one hundred years ago, "By the newly invented automobile, we have the opportunity to completely solve the problem of horse dung everywhere on the street." It was correct for the faithful empiricist, but it only answered a small part of the questions. We need some revolutionary thinking to match a revolutionary technology, even if most of them proved to be wrong one hundred years later.
+@APA2018autonomous give a comprehensive prospect for the AVs era, including rethinking the parking standard, right-of-way, and improving transit. But these approaches are hoping the new technology to solve the old problems belong to the current age, rather than propose some strategies towards a new age. It is similar to say, in one hundred years ago, “By the newly invented automobile, we have the opportunity to completely solve the problem of horse dung everywhere on the street.” It was correct for the faithful empiricist, but it only answered a small part of the questions. We need some revolutionary thinking to match a revolutionary technology, even if most of them will prove to be wrong one hundred years later.
 
 
 References {#references .unnumbered}
